# TensorCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dot2svg.sh  fetch_model.sh  run_tests.sh
.github/workflows/: workflow.yaml
flags/: CMakeLists.txt
src/: main.cpp
src/driver/: CMakeLists.txt
src/driver/include/driver/: driver_options.hpp  tool_runner.hpp
src/driver/source/: driver_options.cpp  tool_runner.cpp
src/graph/: CMakeLists.txt
src/graph/include/graph/: attribute.hpp  graph.hpp  loader.hpp  node.hpp
src/graph/source/: attribute.cpp  graph.cpp
src/helpers/: CMakeLists.txt
src/helpers/include/helpers/: trace_calls.hpp
src/mlir_backend/: CMakeLists.txt
src/mlir_backend/include/mlir_backend/: mlir_backend.hpp
src/mlir_backend/source/: mlir_backend_common.cpp  mlir_backend_conv.cpp  mlir_backend_elementwise.cpp  mlir_backend_internal.hpp  mlir_backend_linear.cpp  mlir_backend_module.cpp
src/onnx_loader/: CMakeLists.txt
src/onnx_loader/include/onnx_loader/: onnx_loader.hpp
src/onnx_loader/source/: onnx_loader.cpp
tests/: CMakeLists.txt  basic_model.py  graph_test.cpp  loader_test.cpp  main_ops.dot  main_ops.py  main_ops.svg.dot  mlir_backend_test.cpp
